--- a/forex/about-us/legal-documents.html
+++ b/forex/about-us/legal-documents.html
@@ -12,7 +12,7 @@
   <link rel="icon" type="image/png" sizes="16x16" href="../img/fav/favicon-16x16.png">
   <link rel="manifest" href="../img/fav/manifest.json">
   <link rel="mask-icon" href="../img/fav/safari-pinned-tab.svg" color="#5bbad5">
-  <meta name="theme-color" content="#ffffff">
+  <meta name="theme-color" content="#2e2963">
 </head>
 <body>
   <header class="page-header  page-header--temp">
@@ -148,9 +148,10 @@
         </div>
       </div>
       <div class="page-footer__copyright">
-        <p>© 2017 All rights reserved LYDYA FINANCIAL LTD.<br>Located at Ajeltake Road, Trust Company Complex, MH 96960, Ajeltake Island, Majuro, Marshall Islands..</p>
-        <p>Forex24 Global is a brand owned and operated by Lydya Financial Ltd, a Cyprus Investment Firm (CIF) regulated and supervised by the Cyprus Securities and Exchange Commission (CySEC) with CIF Licence number 300/16 and Company registration number HE334292.</p>
-        <p>The Company is also registered with: FCA in UK with reg. no. 782501; BaFin in Germany with reg. no. 1349943; CONSOB in Italy with reg. no. 4624; ACP in France with reg. no. 75980; CNMV in Spain with reg. no. 4373.</p>
+        <p>© 2017 All rights reserved to Rodan Finance S.A.<br>Located at: Ajeltake Road, Trust Company Complex, MH 96960, Ajeltake Island, Majuro, Marshall Islands.</p>
+        <!-- <p>Forex24 Global is a brand owned and operated by Lydya Financial Ltd, a Cyprus Investment Firm (CIF) regulated and supervised by the Cyprus Securities and Exchange Commission (CySEC) with CIF Licence number 300/16 and Company registration number HE334292.</p> -->
+        <!-- <p>The Company is also registered with: FCA in UK with reg. no. 782501; BaFin in Germany with reg. no. 1349943; CONSOB in Italy with reg. no. 4624; ACP in France with reg. no. 75980; CNMV in Spain with reg. no. 4373.</p> -->
+        <p>Forex24Global.com is operated by Rodan Finance S.A. is an Investment Firm, incorporated in the Marshall Islands, with registration number 90868.  Address: Ajeltake Road, Trust Company Complex, MH 96960, Ajeltake Island, Majuro, Marshall Islands.</p>
       </div>
     </div>
   </footer>
