--- a/mm/index.html
+++ b/mm/index.html
@@ -26,8 +26,8 @@
           <nav class="main-nav">
             <img src="img/logo-w.svg" width="180" height="auto" alt="MultiplyMarket">
             <div class="main-nav__user">
-              <a class="button" href="templates/register.html">Open live account</a>
-              <a class="button  button--black" href="templates/login.html">Log In</a>
+              <a class="button" href="https://client.multiplymarket.com/en/members/register/real">Open live account</a>
+              <a class="button  button--black" href="https://client.multiplymarket.com/en/members/login">Log In</a>
               <a class="button  button--number" href="tel:++442038290032">+442038290032</a>
             </div>
           </nav>
