--- a/mm/index.html
+++ b/mm/index.html
@@ -64,7 +64,7 @@
         <div class="title  title--down">
           <h1>MultiplyMarket</h1>
           <p>Innovative power tools<br>that align with your goals</p>
-          <a class="button  button--title" href="templates/register.html">Open live account</a>
+          <a class="button  button--title" href="https://client.multiplymarket.com/en/members/register/real">Open live account</a>
         </div>
       </div>
     </div>
@@ -109,7 +109,7 @@
         <div class="trade__left">
           <h1>Trade now</h1>
           <p>Trade Shares, Indices, Forex, Commodities and Cryptocurrencies with CFDs</p>
-          <a class="button  button--green" href="templates/register.html">Sign up for free</a>
+          <a class="button  button--green" href="https://client.multiplymarket.com/en/members/register/real">Sign up for free</a>
           <small>TradingCFDs involves risk of loss</small>
         </div>
         <div class="trade__right">
@@ -178,7 +178,7 @@
           <p>Trade and Choose from Numerous Instruments Available on MultiplyMarket</p>
         </div>
       </div>
-      <a class="button  button--green" href="#">Get Started</a>
+      <a class="button  button--green" href="https://client.multiplymarket.com/en/members/register/real">Get Started</a>
     </div>
   </section>
   <section class="map">
@@ -204,8 +204,8 @@
       <div class="footer__flex">
         <ul>
           <b>Account</b>
-          <li><a>Log In</a></li>
-          <li><a href="templates/register.html">Sign Up</a></li>
+          <li><a href="https://client.multiplymarket.com/en/members/login">Log In</a></li>
+          <li><a href="https://client.multiplymarket.com/en/members/register/real">Sign Up</a></li>
         </ul>
         <ul>
           <b>About Us</b>
