--- a/mm/index.html
+++ b/mm/index.html
@@ -39,7 +39,7 @@
                   <li><a href="templates/about-us.html">Trade with<br>MultiplyMarket</a></li>
                   <li><a href="templates/account-types.html">Account types</a></li>
                   <li><a href="templates/segregated.html">Segregated account</a></li>
-                  <li><a href="templates/register.html">Open live account</a></li>
+                  <li><a href="https://client.multiplymarket.com/en/members/register/real">Open live account</a></li>
               </ul>
             </li>
             <li>
