--- a/tgi/index.html
+++ b/tgi/index.html
@@ -5,8 +5,37 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
   <title>TGI Intelligent Solution</title>
+  <link rel="stylesheet" href="css/style.min.css">
 </head>
 <body>
+  <section class="title">
+    <header class="header">
+      <div class="container  container--title">
+        <div class="header__flex">
+          <img src="" alt="TGI Intelligent Solution">
+          <nav class="main-nav">
+            <ul>
+              <li><a href="#">Home</a></li>
+              <li><a href="#">Solutions</a></li>
+              <li><a href="#">Features</a></li>
+              <li><a href="#">Smart Feed</a></li>
+              <li><a href="#">White Label</a></li>
+              <li><a href="#">About Us</a></li>
+              <li><a href="#">Whats New</a></li>
+              <li><a href="#">Contact</a></li>
+            </ul>
+          </nav>
+        </div>
+      </div>
+    </header>
+    <div class="container  container--title">
+      <div class="title__content">
+        <h1>Готовые решения для Брокерских Компаний!</h1>
+        <a href="#"></a>
+        <a href="#"></a>
+      </div>
+    </div>
+  </section>
   
 </body>
 </html>
