add a few blocks

--- a/tgi/index.html
+++ b/tgi/index.html
@@ -12,7 +12,7 @@
     <header class="header">
       <div class="container  container--title">
         <div class="header__flex">
-          <img src="" alt="TGI Intelligent Solution">
+          <img src="img/logo.png" alt="TGI Intelligent Solution">
           <nav class="main-nav">
             <ul>
               <li><a href="#">Home</a></li>
@@ -30,12 +30,47 @@
     </header>
     <div class="container  container--title">
       <div class="title__content">
-        <h1>Готовые решения для Брокерских Компаний!</h1>
-        <a href="#"></a>
-        <a href="#"></a>
+        <h1>Готовые решения<br>для<span> Брокерских<br>Компаний!</span></h1>
+        <a class="button  button--partner" href="#">Стать партнером</a>
+        <a class="button  button--broker" href="#">Стать брокером</a>
       </div>
     </div>
   </section>
-  
+  <section class="edge">
+    <div class="container  container--edge">
+      <h1>Наши преимущества</h1>
+      <div class="edge__flex">
+        <div class="edge__box  edge__box--1">
+          <b class="edge__title-dark">Качественная платформа</b>
+          <p>Наша инновационная платформа была разработана с учетом наиболее популярных тенденций</p>
+        </div>
+        <div class="edge__box  edge__box--2">
+          <b class="edge__title-dark">Многофункциональный CRM</b>
+          <p>Мы разработали интуитивно понятный интерфейс для администраторов с максимальным функционалом.</p>
+        </div>
+        <div class="edge__box  edge__box--3">
+          <b class="edge__title-dark">Криптовалютный брокер</b>
+          <p>Создание компаний, направленных на биржевую торговлю и обмен криптовалюами</p>
+        </div>
+      </div>
+      <div class="edge__flex  edge__flex--second">
+        <div class="edge__box  edge__box--4">
+          <b class="edge__title-light">Разработка эффективного сайта</b>
+          <p>Создание привлекательного для клиентов официального сайта компании, с учетом всех ваших требований и пожеланий.</p>
+        </div>
+        <div class="edge__box  edge__box--5">
+          <b class="edge__title-light">Адаптивный дизайн</b>
+          <p>Сайт и платформа разработаны по последним технологиям и всегда будут корректно отображаться на любых типах устройств</p>
+        </div>
+        <div class="edge__box  edge__box--6">
+          <b class="edge__title-light">Точные котировки</b>
+          <p>Мы используем котировки только от проверенных поставщиков.</p>
+        </div>
+      </div>
+    </div>
+  </section>
+  <section class="slider">
+    
+  </section>
 </body>
 </html>
