--- a/tgi/index.html
+++ b/tgi/index.html
@@ -69,8 +69,29 @@
       </div>
     </div>
   </section>
-  <section class="slider">
+  <!-- <section class="slider">
     
+  </section> -->
+  <section class="map">
+    <h1>У нас есть опыт работы по всему миру</h1>
+    <div class="map__inside"></div>
+  </section>
+  <section class="contact">
+    <div class="container  container--title">
+      <form class="form" method="post">
+        <h1>Возникли вопросы?</h1>
+        <div class="form__flex">
+          <div class="form__left">
+            <p>Если вас заинтересовали наши услуги, пишите нам, мы готовы ответить на любые вопросы!</p>
+            <input type="text" placeholder="Имя">
+            <input type="tel" placeholder="Телефон">
+            <input type="email" placeholder="E-mail">
+            <input type="submit" value="Задать вопрос">
+          </div>
+          <textarea placeholder="Ваш вопрос"></textarea>
+        </div>
+      </form>
+    </div>
   </section>
 </body>
 </html>
