--- a/tgi/index.html
+++ b/tgi/index.html
@@ -91,6 +91,9 @@
           <textarea placeholder="Ваш вопрос"></textarea>
         </div>
       </form>
+      <h1 class="contact__title">Начни <span>свой бизнес</span> прямо сейчас<br>с <span>командой професионалов!</span></h1>
+      <a class="button  button--broker  button--broker-contact" href="#">Стать брокером</a>
+      <a class="button  button--partner  button--partner-contact" href="#">Стать партнером</a>
     </div>
   </section>
 </body>
