--- a/tgi/index.html
+++ b/tgi/index.html
@@ -28,7 +28,7 @@
         </div>
       </div>
     </header>
-    <div class="container  container--title">
+    <div class="container">
       <div class="title__content">
         <h1>Готовые решения<br>для<span> Брокерских<br>Компаний!</span></h1>
         <a class="button  button--partner" href="#">Стать партнером</a>
@@ -37,7 +37,7 @@
     </div>
   </section>
   <section class="edge">
-    <div class="container  container--edge">
+    <div class="container">
       <h1>Наши преимущества</h1>
       <div class="edge__flex">
         <div class="edge__box  edge__box--1">
@@ -96,5 +96,11 @@
       <a class="button  button--partner  button--partner-contact" href="#">Стать партнером</a>
     </div>
   </section>
+  <footer class="footer">
+    <div class="container">
+      <img src="img/logo-footer.png" alt="TGI Intelligent Solution">
+      <p>Бинарные опционы подразумевают высокий уровень риска для вашего капитала в силу волатильности базовых рынков. Данные продукты могут не подходить некоторым инвесторам. Таким образом, вы должны убедиться в том, что вы понимаете риски, и проконсультироваться у независимого и должным образом лицензированного финансового консультанта.</p>
+    </div>
+  </footer>
 </body>
 </html>
