--- a/tgi/index.html
+++ b/tgi/index.html
@@ -10,7 +10,7 @@
 <body>
   <section class="title">
     <header class="header">
-      <div class="container  container--title">
+      <div class="container">
         <div class="header__flex">
           <img src="img/logo.png" alt="TGI Intelligent Solution">
           <nav class="main-nav">
@@ -74,10 +74,10 @@
   </section> -->
   <section class="map">
     <h1>У нас есть опыт работы по всему миру</h1>
-    <div class="map__inside"></div>
+    <img src="img/map.png" alt="Map">
   </section>
   <section class="contact">
-    <div class="container  container--title">
+    <div class="container">
       <form class="form" method="post">
         <h1>Возникли вопросы?</h1>
         <div class="form__flex">
