--- a/trade-lp/index-it.html
+++ b/trade-lp/index-it.html
@@ -299,62 +299,56 @@
       <h1 class="visually-hidden">Advantages</h2>
       <div class="edge__flex">
         <div class="edge__box  edge__box--over">
-          <b>+ di 200 beni finanziari</b>
-          <p>Scegli tra varie classi di Beni Finanziari, incluse CFD sulle Valute, Metalli Preziosi, Azioni, Indici e Materie Prime.</p>
+          <b>Vantaggi Leva flessibile</b>
+          <p>Con noi, ottieni una grande leva flessibile. Quando scambi con una leva più alta aumenti le tue possibilità di guadagno ma aumenti anche la tua probabilita' di rischio.</p>
         </div>
         <div class="edge__box  edge__box--free">
-          <b>Conto di Prova Gratuito</b>
-          <p>Inizia a fare pratica con denaro virtuale prima di investire il proprio. Impara a conoscere il tuo webtrader o l'App. per cellulare con un Conto di Prova Gratuito e testa le tue abilita' nelle transazioni.</p>
+          <b>Spread estremamente bassi</b>
+          <p>È facile fare trading con spread fissi e variabili, che sono i piu' bassi nel settore. Spread da 0.1 su conti ECN e 0.5 su conti standard.</p>
         </div>
         <div class="edge__box  edge__box--award">
-          <b>Piattaforma Vincente</b>
-          <p>Effettua transazioni con una Piattaforma Vincente, con un'App. per      Cellulare oppure con una Piattaforma in rete senza scaricarla con un ambiente fatto su misura per le tue necessita'.</p>
+          <b>Istruzione gratuita</b>
+          <p>Nuovo al trading? Ti forniamo una copertura completa, forniremo articoli completi, webinar e blog altamente istruttivi. Questi strumenti ti istruiranno e ti forniranno le giuste strategie di trading.</p>
+        </div>
+      </div>
+      <div class="edge__flex  edge__flex--second">
+        <div class="edge__box  edge__box--overs">
+          <b>Nessuna tassa sui depositi</b>
+          <p>Il nostro piano è di aiutare i nostri clienti a sfruttare al meglio il loro tempo e denaro. Quindi le spese addebitate sul tuo conto quando fai un deposito ti verranno restituite. Poi potrai ritirare i tuoi fondi rapidamente senza alcun intoppo.</p>
+        </div>
+        <div class="edge__box  edge__box--frees">
+          <b>Esecuzione Superveloce</b>
+          <p>Forex24 Global offre una rapida esecuzione di tutte le tue transazioni. Non c'è alcun ritardo in nessuna delle nostre operazioni dall'inizio alla fine.</p>
+        </div>
+        <div class="edge__box  edge__box--awards">
+          <b>Analisi tecnica e fondamentale gratuita</b>
+          <p>Qui garantiamo che lo standard di alta qualità delle nostre analisi tecniche e fondamentali sara' sempre mantenuto. Inoltre, il feedback del pubblico sui nostri servizi è eccezionale.</p>
         </div>
       </div>
     </div>
   </section>
-  <section class="app">
+  <section class="start">
     <div class="container">
-      <h1 class="visually-hidden">Non perdere questa prova gratis con</h3>
-      <div class="app__top">
-        <b>Forex24 globale sempre e ovunque</b>
-        <p>Scambia i tuoi beni sottostanti preferiti anche mentre viaggi, utilizzando l'applicazione disponibile su App Store e Google Play. Rimani connesso e aggiornato e fai trading mentre sei in movimento.</p>
-        <a href="#" title="App Store">
-          <img src="img/apple.png" alt="App Store"><br>
-        </a>
-        <a href="#" title="Google Play">
-          <img src="img/google.png" alt="Google Play">
-        </a>
+      <h1>3 semplici passaggi per iniziare a fare trading</h1>
+      <div class="start__flex">
+        <div class="start__box  start__box--one">
+          <b>Registrati Entra</b>
+          <p>Registrati e iscriviti oggi</p>
+        </div>
+        <div class="start__box  start__box--two">
+          <b>Il mio Forex24 Global</b>
+          <p>Accedi al tuo portale di trading personale</p>
+        </div>
+        <div class="start__box  start__box--three">
+          <b>Scambia e guadagna</b>
+          <p>Inviaci una documento di identificazione, effettua un deposito nel tuo conto e inizia a fare trading</p>
+        </div>
       </div>
-      <div class="app__bottom"></div>
     </div>
   </section>
   <div class="promo">
     <div class="promo__logo"></div>
   </div>
-  <section class="trading">
-    <div class="container">
-      <h1>Altri motivi per aprire il tuo conto di trading con <span>Forex24 Global</span></h1>
-      <div class="trading__flex">
-        <ul>
-          <li>Forex24 Global è completamente regolamentato e possiede la licenza</li>
-          <li>Nessun costo di deposito su conti reali</li>
-          <li>Spread estremamente bassi</li>
-          <li>Supporto clienti amichevole</li>
-          <li>Registrato negli Stati membri dell'UE</li>
-          <li>Gamma di tipi di conto per esperti e principianti</li>
-        </ul>
-        <ul>
-          <li>Tipo di conto Swap-Free disponibile</li>
-          <li>Consulenti esperti e altri plug-in MetaTrader 4 sono i benvenuti</li>
-          <li>Leva flessibile* per tutti i conti di trading fino a 1: 400</li>
-          <li>I tuoi fondi sono depositati in Istituti bancari regolamentati</li>
-          <li>Deposita e preleva fondi con una scelta di sistemi di pagamento</li>
-          <p>*La leva viene offerta in base alle tue conoscenze ed esperienze.</p>
-        </ul>
-      </div>
-    </div>
-  </section>
   <section class="acc">
     <div class="container">
       <h1>Sei pronto per iniziare a fare trading?<br>Ottieni subito il tuo conto demo gratuito!</h1>
@@ -377,6 +371,8 @@
   <footer class="footer">
     <div class="container">
       <h1 class="visually-hidden">Footer</h1>
+      <b>Informazioni sulla societa'</b>
+      <p>Il dominio www.forex24.com è gestito da Lydya Financial Ltd, una società di investimento di Cipro, autorizzata e regolamentata dalla Commissione per i titoli e gli scambi di Cipro con il numero di licenza CIF 300/16. Lydya Financial Ltd si trova a 4 Modestou Panteli, Mesa Geitonia, CY-4003, Limassol, Cipro.</p>
       <b>Avvertenza generale sul rischio</b>
       <p>La negoziazione di prodotti con leva finanziaria complessi come i CFD comporta un alto livello di rischio e può comportare la perdita di tutti gli investimenti. Pertanto, i CFD potrebbero non essere appropriati per tutti gli investitori. Non dovresti investire denaro che non puoi permetterti di perdere. Prima di decidere di fare trading, è necessario prendere coscienza di tutti i rischi associati al trading di CFD e chiedere consiglio ad un consulente finanziario indipendente e opportunamente autorizzato. In nessuna circostanza dovremo essere ritenuti responsabili verso qualsiasi persona o entità per (a) qualsiasi perdita o danno, in tutto o in parte, causato da, derivante da, o relativo a transazioni correlate a CFD o (b) qualsiasi diretto, indiretto, speciale, danno consequenziali o incidentale di sorta. Per ulteriori informazioni sui rischi associati al trading di CFD, leggi la nostra "Dichiarazione informativa completa sul rischio".</p>
       <p>Copyright © 2018. Tutti i diritti riservati</p>
