--- a/trade-lp/index.html
+++ b/trade-lp/index.html
@@ -315,7 +315,7 @@
         </div>
         <div class="edge__box  edge__box--frees">
           <b>Superfast Execution</b>
-          <p>FXTM provides a speedy execution of all your transactions. There is no delay in any of our operation from start to finish.</p>
+          <p>Forex24 Global provides a speedy execution of all your transactions. There is no delay in any of our operation from start to finish.</p>
         </div>
         <div class="edge__box  edge__box--awards">
           <b>Free Technical & Fundamental Analysis</b>
