--- a/mm-lp/index.html
+++ b/mm-lp/index.html
@@ -22,10 +22,13 @@
     <div class="container">
       <div class="header__flex">
         <img src="img/logo.svg" width="170" height="47" alt="MultiplyMarket">
-        <nav class="nav">
-          <a class="button  button--green" href="https://client.multiplymarket.com/en/members/register/real">Open live account</a>
-          <a class="button  button--black" href="https://client.multiplymarket.com/en/members/login">Log In</a>
-          <a class="button  button--tel" href="tel:++442038290032">+442038290032</a>
+        <nav class="nav  nav--closed  nav--nojs">
+          <button class="nav__toggle" type="button">Open menu</button>
+          <div class="nav__container">
+            <a class="nav__item  button  button--green" href="https://client.multiplymarket.com/en/members/register/real">Open live account</a>
+            <a class="nav__item  button  button--black" href="https://client.multiplymarket.com/en/members/login">Log In</a>
+            <a class="nav__item  button  button--tel" href="tel:++442038290032">+442038290032</a>
+          </div>
         </nav>
       </div>
     </div>
@@ -34,9 +37,9 @@
     <div class="container">
       <div class="table__content">
         <b>100% BONUS</b>
-        <p>Sign up to MultiplyMarket today and we'll match your first deposit<br>of <span>$300</span>, giving you <span>$600</span> to trade.</p>
+        <p>Sign up to MultiplyMarket today and we'll match your first deposit of <span>$300</span>, giving you <span>$600</span> to trade.</p>
         <a href="#">Claim your bonus</a>
-        <img src="img/table.png" alt="">
+        <img src="img/table.png" alt="Deposit and Bonus">
       </div>
     </div>
   </section>
@@ -66,5 +69,6 @@
       </div>
     </div>
   </section>
+  <script src="js/mobile-menu.js"></script>
 </body>
 </html>
