--- a/mm-lp/index.html
+++ b/mm-lp/index.html
@@ -69,6 +69,33 @@
       </div>
     </div>
   </section>
+  <section class="terms">
+    <p>CFDs are leveraged products that involve substantial risk and may result in the loss of your entire balance.</p>
+    <hr>
+    <div class="container">
+      <details>
+        <summary>Bonus Terms & Conditions</summary>
+        <ol>
+          <li>This promo is valid to customers on their first deposit made during the promotion period.</li>
+          <li>Your trading accounts will be credited with bonuses upon completion of your deposit after which identification documents are submitted for verification.</li>
+          <li>Bonuses will be credited to your account  in accordance with the trading platform's base currency.</li>
+          <li>For Japanese Yen accounts, bonuses are calculated according to the USDJPY official exchange rate.</li>
+          <li>In order to withdraw your bonus, you are expected to carry out a minimum trading volume of 10,000 base currency for every 1 base currency bonus within 6 months. Failure to trade the expected amount in the given space of time will result in the cancellation and removal of the bonus from your account.</li>
+          <li>Bonuses are eligible on all CFD and FX trades except for cryptocurrency trades. By trading cryptocurrencies, you are aware that any bonus you have received will be annulled or deducted from the balance in your account.</li>
+          <li>Clients that live in France who are holders of Limited Risk Account are eligible for a one time bonus of 50€ on their very first deposit only.</li>
+          <li>Clients from the countries listed here are not eligible for this promo: Bangladesh, China, Hong Kong, Indonesia, Iran, Macao, Malaysia, Mongolia, Pakistan, Taiwan, Thailand, and Vietnam.</li>
+        </ol>
+      </details>
+    </div>
+  </section>
+  <footer class="footer">
+    <div class="container">
+      <h1>Risk Warning:</h1>
+      <p>Trading in Forex and CFDs can carry a high level of risk and can result in the loss of part or all of your investment, so it may not be appropriate for all investors. You should be aware of all the risks associated with Forex and CFD trading and seek for independent advice. Past performance does not constitute a reliable indicator of future results. Forecasts for the future do not constitute a reliable indicator of future performance. Copyright for the pages and for the screens displaying the pages, and for the information and material therein and in their arrangement, is owned by © 2017.VACENTY FINANCE LIMITED All Rights Reserved, Registered in Marshall Islands Trust Company Complex, Ajelatake Road, Ajelatake Island, Majuro. Marshall Islands, MH96960 (henceforth: “MultiplyMarket”) unless otherwise indicated.</p>
+      <hr>
+      <p>© 2017 ALL right reserved MultiplyMarket</p>
+    </div>
+  </footer>
   <script src="js/mobile-menu.js"></script>
 </body>
 </html>
