--- a/mm-lp/index.html
+++ b/mm-lp/index.html
@@ -46,25 +46,17 @@
   <section class="edge">
     <div class="container">
       <div class="edge__flex">
-        <div class="edge__box">
-          <b>2015</b>
-          <p>The Best Forex Brand</p>
-          <small>Investors Chronicle</small>
+        <div class="edge__box  edge__box--1">
+          <p>Intuitive tools and Competitive pricing</p>
         </div>
-        <div class="edge__box">
-          <b>2016</b>
-          <p>Best Forex Provider</p>
-          <small>Global Brands Magazine</small>
+        <div class="edge__box  edge__box--2">
+          <p>Transparent and Trustworthy</p>
         </div>
-        <div class="edge__box">
-          <b>2017</b>
-          <p>Best MT5 Broker</p>
-          <small>Shares Awards</small>
+        <div class="edge__box  edge__box--3">
+          <p>Secured<br>Funds</p>
         </div>
-        <div class="edge__box">
-          <b>2017</b>
-          <p>Best Execution Broker</p>
-          <small>CFI.co Awards</small>
+        <div class="edge__box  edge__box--4">
+          <p>Algo<br>Trading</p>
         </div>
       </div>
     </div>
