--- a/tgi/index.html
+++ b/tgi/index.html
@@ -23,17 +23,20 @@
       <div class="container">
         <div class="header__flex">
           <img src="img/logo.png" alt="TGI Intelligent Solution">
-          <nav class="main-nav">
-            <ul>
-              <li><a href="#">Home</a></li>
-              <li><a href="#">Solutions</a></li>
-              <li><a href="#">Features</a></li>
-              <li><a href="#">Smart Feed</a></li>
-              <li><a href="#">White Label</a></li>
-              <li><a href="#">About Us</a></li>
-              <li><a href="#">Whats New</a></li>
-              <li><a href="#">Contact</a></li>
-            </ul>
+          <nav class="main-nav  main-nav--closed  main-nav--nojs">
+            <button class="main-nav__toggle" type="button">Open menu</button>
+            <div class="main-nav__container">
+              <ul>
+                <li class="main-nav__item"><a href="#">Home</a></li>
+                <li class="main-nav__item"><a href="#">Solutions</a></li>
+                <li class="main-nav__item"><a href="#">Features</a></li>
+                <li class="main-nav__item"><a href="#">Smart Feed</a></li>
+                <li class="main-nav__item"><a href="#">White Label</a></li>
+                <li class="main-nav__item"><a href="#">About Us</a></li>
+                <li class="main-nav__item"><a href="#">Whats New</a></li>
+                <li class="main-nav__item"><a href="#">Contact</a></li>
+              </ul>
+            </div>
           </nav>
         </div>
       </div>
@@ -112,5 +115,6 @@
       <p>Бинарные опционы подразумевают высокий уровень риска для вашего капитала в силу волатильности базовых рынков. Данные продукты могут не подходить некоторым инвесторам. Таким образом, вы должны убедиться в том, что вы понимаете риски, и проконсультироваться у независимого и должным образом лицензированного финансового консультанта.</p>
     </div>
   </footer>
+  <script src="js/mobile-menu.js"></script>
 </body>
 </html>
