--- a/forex/index.html
+++ b/forex/index.html
@@ -5,9 +5,10 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
   <title>Forex 24</title>
+  <link rel="stylesheet" href="css/style.min.css">
+  <!-- Slick -->
   <link rel="stylesheet" href="js/slick/slick.css"/>
   <link rel="stylesheet" href="js/slick/slick-theme.css"/>
-  <link rel="stylesheet" href="css/style.min.css">
   <!-- Favicon -->
   <link rel="apple-touch-icon" sizes="76x76" href="img/fav/apple-touch-icon.png">
   <link rel="icon" type="image/png" sizes="32x32" href="img/fav/favicon-32x32.png">
