--- a/tgi/index.html
+++ b/tgi/index.html
@@ -25,7 +25,7 @@
     <header class="header">
       <div class="container">
         <div class="header__flex">
-          <img src="img/logo.png" width="184" alt="TGI Intelligent Solution">
+          <img src="img/logo.png" alt="TGI Intelligent Solution">
           <nav class="main-nav  main-nav--closed  main-nav--nojs">
             <button class="main-nav__toggle" type="button">Open menu</button>
             <div class="main-nav__container">
