--- a/mm/index.html
+++ b/mm/index.html
@@ -77,7 +77,7 @@
           <b>Multyplatform Trading</b>
           <p>Your goals are unique, so your investment guidance should be too. This is why at MultiplyMarket we take the time to listen and understand what matters most to you before helping you develop and manage your investment strategy. The MT4 is a renowned application which gives you the opportunity to trade Forex, Commodities, and Futures. It is very suitable for those new to trading and also to experienced ones, as the technology is well advanced and easy to use.</p>
         </div>
-        <img class="trading__img" src="img/trading-right.jpg">
+        <img class="trading__img" src="img/trading-right.png">
       </div>
       <div class="trading__flex  trading__flex--second">
         <div class="trading__box  trading__box--tools">
