--- a/mm/index.html
+++ b/mm/index.html
@@ -16,9 +16,12 @@
   <meta name="msapplication-TileColor" content="#2b5797">
   <meta name="msapplication-TileImage" content="img/favicon/mstile-144x144.png">
   <meta name="theme-color" content="#ffffff">
+  <!-- Slick -->
+  <link rel="stylesheet" href="js/slick/slick.css"/>
+  <link rel="stylesheet" href="js/slick/slick-theme.css"/>
 </head>
 <body>
-  <section class="video">
+  <!-- <section class="video">
     <video src="img/stats.mov" poster="img/edge.png" autoplay muted loop></video>
     <div class="container">
       <div class="video__header">
@@ -69,6 +72,63 @@
       </div>
     </div>
     <iframe src="https://www.littinvest.com/trade.php/trader/widgets/flux" frameborder="0"></iframe>
+  </section> -->
+  <section class="slider">
+    <div class="slider__content">
+      <div class="slider__box  slider__box--1">
+        <header class="header">
+          <div class="container">
+            <nav class="main-nav">
+              <img src="img/logo-w.svg" width="180" height="auto" alt="MultiplyMarket">
+              <ul class="sub-nav">
+                  <li>
+                    <a class="sub__title">Accounts</a>
+                    <ul class="sub-nav__list">
+                        <li><a href="templates/about-us.html">Trade with<br>MultiplyMarket</a></li>
+                        <li><a href="templates/account-types.html">Account types</a></li>
+                        <li><a href="templates/segregated.html">Segregated account</a></li>
+                        <li><a href="https://client.multiplymarket.com/en/members/register/real">Open live account</a></li>
+                    </ul>
+                  </li>
+                  <li>
+                    <a class="sub__title">Platforms</a>
+                    <ul class="sub-nav__list">
+                        <li><a href="templates/platform.html">MultiplyMarket Trade Meta Trader 4</a></li>
+                        <li><a href="templates/web.html">MultiplyMarket Web Trader</a></li>
+                        <li><a href="templates/mobile.html">MultiplyMarket Trade Mobile</a></li>
+                    </ul>
+                  </li>
+                  <li>
+                    <a class="sub__title">Tools</a>
+                    <ul class="sub-nav__list">
+                        <li><a href="templates/spread.html">Spreads and trading hours</a></li>
+                        <li><a href="templates/glossary.html">Trade glossary</a></li>
+                        <li><a href="templates/signals.html">Forex Signals</a></li>
+                        <li><a href="templates/account-faq.html">Account faq</a></li>
+                        <li><a href="templates/account-funding.html">Account funding & Withdrawal</a></li>
+                    </ul>
+                  </li>
+              </ul>
+              <div class="main-nav__user">
+                <a class="button" href="https://client.multiplymarket.com/en/members/register/real">Open live account</a>
+                <a class="button  button--black" href="https://client.multiplymarket.com/en/members/login">Log In</a>
+                <a class="button  button--number" href="tel:++442038290032">+442038290032</a>
+              </div>
+            </nav>
+          </div>
+        </header>
+        <div class="container">
+          <div class="title  title--down">
+            <h1>MultiplyMarket</h1>
+            <p>Innovative power tools<br>that align with your goals</p>
+            <a class="button  button--title" href="https://client.multiplymarket.com/en/members/register/real">Open live account</a>
+          </div>
+        </div>
+      </div>
+      <div class="slider__box"></div>
+      <div class="slider__box"></div>
+      <div class="slider__box"></div>
+    </div>
   </section>
   <section class="trading">
     <div class="container">
@@ -240,5 +300,8 @@
       <p>© 2017 ALL right reserved MultiplyMarket</p>
     </div>
   </footer>
+  <script src="js/jquery.min.js"></script>
+  <script src="js/slick/slick.min.js"></script>
+  <script src="js/slider.js"></script>
 </body>
 </html>
