--- a/mm/index.html
+++ b/mm/index.html
@@ -82,48 +82,6 @@
         </div>
         <img class="trading__img" src="img/trading-right.png">
       </div>
-    </div>
-    <section class="slider">
-      <div class="slider__content">
-        <div class="slider__box  slider__box--1">
-          <div class="container">
-            <div class="title  title--down">
-              <h1>MultiplyMarket</h1>
-              <p>Innovative power tools<br>that align with your goals</p>
-              <a class="button  button--title" href="https://client.multiplymarket.com/en/members/register/real">Open live account</a>
-            </div>
-          </div>
-        </div>
-        <div class="slider__box  slider__box--2">
-          <div class="container">
-            <div class="title  title--down">
-              <h1>MultiplyMarket</h1>
-              <p>Innovative power tools<br>that align with your goals</p>
-              <a class="button  button--title" href="https://client.multiplymarket.com/en/members/register/real">Open live account</a>
-            </div>
-          </div>
-        </div>
-        <div class="slider__box  slider__box--3">
-          <div class="container">
-            <div class="title  title--down">
-              <h1>MultiplyMarket</h1>
-              <p>Innovative power tools<br>that align with your goals</p>
-              <a class="button  button--title" href="https://client.multiplymarket.com/en/members/register/real">Open live account</a>
-            </div>
-          </div>
-        </div>
-        <div class="slider__box  slider__box--4">
-          <div class="container">
-            <div class="title  title--down">
-              <h1>MultiplyMarket</h1>
-              <p>Innovative power tools<br>that align with your goals</p>
-              <a class="button  button--title" href="https://client.multiplymarket.com/en/members/register/real">Open live account</a>
-            </div>
-          </div>
-        </div>
-      </div>
-    </section>
-    <div class="container">
       <div class="trading__flex  trading__flex--second">
         <div class="trading__box  trading__box--tools">
           <img src="img/trading-1.svg" alt="Intuitive tools">
@@ -144,6 +102,34 @@
           <img src="img/trading-4.svg" alt="Algo trading">
           <b>Algo<br>Trading</b>
           <p>Algo Trading is a program that offers everyone the opportunity to trade with better precision and high success rate than he/she would normally get. It makes use of a scenario-based approach and artificial intelligence so as to develop the best trading approach for the circumstances. Different variables such as price, quantity and time period are taken into serious consideration as well. The number of traders that use our Algo trading keeps increasing by the day, as it makes the trading journey easy and well profiting.</p>
+        </div>
+      </div>
+    </div>
+  </section>
+  <section class="slider">
+    <div class="slider__content">
+      <div class="slider__box  slider__box--1">
+        <div class="container">
+          <p>Super fast speed in the execution<br>of orders, with millions of orders<br>performed so far</p>
+          <a class="button  button--slider" href="https://client.multiplymarket.com/en/members/register/real">Open live account</a>
+        </div>
+      </div>
+      <div class="slider__box  slider__box--2">
+        <div class="container">
+          <b>Take on the market with<br>our innovative powerful<br>platforms</b>
+          <p>Trade on the go with our unique mobile platform</p>
+          <a class="button  button--slider" href="https://client.multiplymarket.com/en/members/register/real">Open live account</a>
+        </div>
+      </div>
+      <div class="slider__box  slider__box--3">
+        <div class="container">
+          <b>Embrace every opportunity to trade –<br>fast and reliable trade executions<br>with transparent pricing</b>
+          <a class="button  button--slider" href="https://client.multiplymarket.com/en/members/register/real">Open live account</a>
+        </div>
+      </div>
+      <div class="slider__box  slider__box--4">
+        <div class="container">
+          <a class="button  button--slider" href="https://client.multiplymarket.com/en/members/register/real">Open live account</a>
         </div>
       </div>
     </div>
