--- a/mm/index.html
+++ b/mm/index.html
@@ -129,6 +129,7 @@
       </div>
       <div class="slider__box  slider__box--4">
         <div class="container">
+          <p>24 hour round the clock<br>trading and support</p>
           <a class="button  button--slider" href="https://client.multiplymarket.com/en/members/register/real">Open live account</a>
         </div>
       </div>
