--- a/forex/about-us/legal-documents.html
+++ b/forex/about-us/legal-documents.html
@@ -7,11 +7,14 @@
   <title>Legal Documents - Forex 24</title>
   <link rel="stylesheet" href="../css/style.min.css">
   <!-- Favicon -->
-  <link rel="apple-touch-icon" sizes="76x76" href="../img/fav/apple-touch-icon.png">
-  <link rel="icon" type="image/png" sizes="32x32" href="../img/fav/favicon-32x32.png">
-  <link rel="icon" type="image/png" sizes="16x16" href="../img/fav/favicon-16x16.png">
-  <link rel="manifest" href="../img/fav/manifest.json">
-  <link rel="mask-icon" href="../img/fav/safari-pinned-tab.svg" color="#5bbad5">
+  <link rel="apple-touch-icon" sizes="180x180" href="../apple-touch-icon.png">
+  <link rel="icon" type="image/png" sizes="32x32" href="../img/favicon/favicon-32x32.png">
+  <link rel="icon" type="image/png" sizes="192x192" href="../img/favicon/android-chrome-192x192.png">
+  <link rel="icon" type="image/png" sizes="16x16" href="../img/favicon/favicon-16x16.png">
+  <link rel="manifest" href="../site.webmanifest">
+  <link rel="mask-icon" href="../img/favicon/safari-pinned-tab.svg" color="#2e2963">
+  <meta name="msapplication-TileColor" content="#2e2963">
+  <meta name="msapplication-TileImage" content="../img/favicon/mstile-144x144.png">
   <meta name="theme-color" content="#2e2963">
 </head>
 <body>
